# trader-performance-vs-market-sentiment

./: .gitignore  README.md  REPORT.md  app.py  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb
scripts/: run_analysis.py
src/primetrade_analysis/: __init__.py  __main__.py  analysis.py  cleaning.py  dashboard_data.py  features.py  load_data.py  modeling.py  pipeline.py
src/primetrade_sentiment_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline_logic.py
