[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primetrade-sentiment-analysis"
version = "0.1.0"
description = "Sentiment vs trader performance analysis for Primetrade.ai assignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.3",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "plotly==5.24.1",
    "streamlit==1.39.0",
    "jupyter==1.1.1",
    "nbformat==5.10.4",
    "pytest==8.3.3",
    "scikit-learn==1.5.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
